Fix alignment of selectable and expandable columns

--- a/projects/epsilon-blueprint/src/styles/tables.scss
+++ b/projects/epsilon-blueprint/src/styles/tables.scss
@@ -57,7 +57,7 @@
       &.th-expandable
       {
         border-right: 0;
-        max-width: 44px;
+        width: 44px;
       }
 
       &[aria-sort]
